--- a/app/globals.css
+++ b/app/globals.css
@@ -55,3 +55,27 @@ h3 {
 .custom-cursor {
   mix-blend-mode: difference;
 }
+html,
+body {
+  height: 100%;
+}
+
+body {
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+}
+/* Hide scrollbar but keep scrolling */
+html {
+  scrollbar-width: none; /* Firefox */
+}
+
+body::-webkit-scrollbar {
+  display: none; /* Chrome, Safari */
+}
+/* Hide native cursor everywhere */
+* {
+  cursor: none !important;
+}
+:root {
+  --red: #b11212;
+}
